--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,400,900' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="icon" href="favicon.png" type="image/x-icon">
-    <title>Hello World</title>
+    <title>Michael Paulukonis</title>
   </head>
   <body>
     <!-- HTML -->
@@ -16,13 +16,13 @@
       <article id="instagram"><span class="load flash animated">LOADING...</span></article>
 
       <div class="bio">
-        <h1>Jessica Lord</h1>
-        <p>I am an open source designer and javascript developer living in Oakland, Ca. I work at GitHub, and it's hella rad. This is test text for this page. So, cool. Coffee, bikes and molé.</p>
+        <h1>Michael Paulukonis</h1>
+        <p>I am a developer and text-experimenter living in Durham, CT</p>
         <ul class="inline-list">
-          <li><a href="">Twitter</a></li>
-          <li><a href="">GitHub</a></li>
-          <li><a href="">Instagram</a></li>
-          <li><a href="">Dribble</a></li>
+          <li><a href="http://www.twitter.com/OtherMichael">Twitter</a></li>
+          <li><a href="https://github.com/michaelpaulukonis">GitHub</a></li>
+          <li><a href="https://instagram.com/michaelpaulukonis/">Instagram</a></li>
+          <!-- <li><a href="http://michaelpaulukonis.com">michaelpaulukonis.com</a></li> -->
         </ul>
       </div>
 
@@ -48,8 +48,8 @@
     <!-- JavaScript -->
       <script type="text/javascript">
         document.addEventListener('DOMContentLoaded', function() {
-          var URL  = '0Ao5u1U6KYND7dG9CRWdjeVB6dGYyN3c3RktocExUV1E' // insta
-          var URL2 = '0Ao5u1U6KYND7dDd2RTBwajZrT3pEc2p2LVVWc0o0WVE' // tweet
+          var URL  = '1mzRLPe9-h3HZs3LucKyV7LKyBWyLFMOj248PQC4alFA' // insta
+          var URL2 = '1b3hxzgCZEv5LAMq-V80XvQ9VE8qoTfoBXsgPrCIfu-c' // tweet
 
           Tabletop.init({ key: URL,  callback: buildInsta,  simpleSheet: true })
           Tabletop.init({ key: URL2, callback: buildTweet,  simpleSheet: true })
