second panel of target badges

--- a/index.html
+++ b/index.html
@@ -28,6 +28,22 @@
 
       <article id="tweet"><span class="load flash animated">LOADING...</span></article>
 
+
+      <div class="bio">
+        <p>other websites</p>
+        <ul class="inline-list">
+          <li><a href="http://michaelpaulukonis.com">michaelpaulukonis.com</a></li>
+          <li><a href="http://www.xradiograph.com">xradiograph.com</a></li>
+        </ul>
+
+        <p>other github web-projects<p>
+        <ul class="inline-list">
+          <li><a href="http://michaelpaulukonis.github.io/mispelr">mispelr</a></li>
+          <li><a href="http://michaelpaulukonis.github.io/malepropp">fairy tale generator</a></li>
+        </ul>
+      </div>
+
+
     </div>
 
     <!-- Templates -->
