link to poetry generators

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         <ul class="inline-list">
           <li><a href="http://michaelpaulukonis.github.io/mispelr">mispelr</a></li>
           <li><a href="http://michaelpaulukonis.github.io/malepropp">fairy tale generator</a></li>
+          <li><a href="http://michaelpaulukonis.github.io/poetrygen/">poetry generators</a></li>
         </ul>
       </div>
 
