Fixed polychrometext link, updated layout around instagram posts

--- a/index.html
+++ b/index.html
@@ -15,8 +15,11 @@
 <body>
   <!-- HTML -->
   <div class="container">
-<!-- SnapWidget -->
-<iframe src="https://snapwidget.com/embed/665709" class="snapwidget-widget" allowtransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:480px; height:160px"></iframe>
+    <article id="instagram">
+      <!-- SnapWidget -->
+      <iframe src="https://snapwidget.com/embed/665709" class="snapwidget-widget" allowtransparency="true"
+        frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:480px; height:160px"></iframe>
+    </article>
 
     <div class="bio">
       <h1>Michael Paulukonis</h1>
@@ -40,13 +43,13 @@
 
       <p>other web-projects<p>
           <ul class="inline-list">
-            <li><a href="https://github.com/MichaelPaulukonis/polychrome.p5">polychrometext</a></li>
+            <li><a href="https://michaelpaulukonis.github.io/polychrome.p5/">polychrometext</a></li>
             <li><a href="https://michaelpaulukonis.github.io/imagetexter.p5/">imagetexter</a></li>
             <li><a href="http://poeticalbot.tumblr.com/">poetical bot</a></li>
             <li><a href="https://leanstooneside.tumblr.com/">List Mania</a></li>
-
             <li><a href="http://michaelpaulukonis.github.io/malepropp">fairy tale generator</a></li>
             <li><a href="http://michaelpaulukonis.github.io/poetrygen/">poetry generators</a></li>
+            <li><a href="http://www.xradiograph.com/WordSalad/BotProjects">bot projects</a></li>
           </ul>
     </div>
 
