--- a/es/404/index.html
+++ b/es/404/index.html
@@ -7,7 +7,7 @@
     <div data-server-rendered="true" id="__nuxt"><!----><div id="__layout"><div class="layout"><div class="container nuxt-content">
   Se ha producido un error
 </div> <footer><div class="footer__info"><div class="container footer__info-container"><div class="footer__copyright">
-        © 2021 — <span>Based on the open-source template by <a target="_blank" href="https://github.com/marinaaisa/nuxt-markdown-blog-starter" class="ani"><span>Marina Aisa</span></a>.</span></div> <a href="#top" class="footer__top-page">
+        © 2021 — <span>Open source template. Mira el código en <a target="_blank" href="https://github.com/marinaaisa/nuxt-markdown-blog-starter" class="ani"><span>Github</span></a>. Hecho por <a target="_blank" href="https://marinaaisa.com/es/" class="ani"><span>Marina Aisa</span></a>.</span></div> <a href="#top" class="footer__top-page">
         ^
       </a></div></div></footer></div></div></div><script>window.__NUXT__={layout:"default",data:[{}],error:null,serverRendered:!0}</script><script src="/_nuxt/0fd7796670580e0dde08.js" defer></script><script src="/_nuxt/3b3a2f6cdc383b1dfbfa.js" defer></script><script src="/_nuxt/b894682e8c7e5cd7c9bc.js" defer></script><script src="/_nuxt/39ada8a0def3fb38bb0b.js" defer></script><script src="/_nuxt/7cf784ce34207b16daed.js" defer></script>
   </body>
